--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 @import "base/varriable";
 @import "components/navigation";
+@import "components/clock";
 
-.cent{
-  margin: auto;
-}
+//.cent{
+//  margin: auto;
+//}
