Timer functionality added

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,7 +1,8 @@
 @import "base/varriable";
 @import "components/navigation";
 @import "components/clock";
+@import "components/timerForm";
 
-//.cent{
-//  margin: auto;
-//}
+.cent{
+  margin: auto;
+}
